src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Number_of_AppDynamics_Users__c</fullName>
        <inlineHelpText>How many people are using AppDynamics?</inlineHelpText>
        <label>Number of AppDynamics Users</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 to 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 to 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 to 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Won_Opportunities__c</fullName>
        <label>Number of Closed/Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>W10 - Closed/Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Referer__c</fullName>
        <label>Original Referer</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Overall_Customer_Satisfaction__c</fullName>
        <label>Overall Customer Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Attention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Locking the premium level allows over riding the standard value?</description>
        <label>Lock Premium Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owned_By_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owned By Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Darryl and Brett when setting the correct ownership to stabilize production. Can be removed following this process (3/30/2015)</description>
        <label>Owner Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_License_Type__c</fullName>
        <formula>text(Owner.Profile.LicenseType)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner.FirstName + &apos; &apos;  +  Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box is checked for Partner Owned accounts.</inlineHelpText>
        <label>Partner Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Maturity_Level__c</fullName>
        <description>This field is used to track the maturity level of a partner</description>
        <inlineHelpText>Please enter the partner&apos;s relationship and maturity level.</inlineHelpText>
        <label>Partner Maturity Level</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mature Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Region__c</fullName>
        <description>General region where partner is located.</description>
        <inlineHelpText>This field is used to create mailing lists for partners in territories.</inlineHelpText>
        <label>Partner Region</label>
        <picklist>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASEAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAmerica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PortalID__c</fullName>
        <label>PortalID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privately_Referenceable__c</fullName>
        <label>Privately Referenceable</label>
        <picklist>
            <controllingField>Reference_Customer__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publicly_Referenceable__c</fullName>
        <label>Publicly Referenceable</label>
        <picklist>
            <controllingField>Reference_Customer__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualification_Status__c</fullName>
        <inlineHelpText>Indicate level of qualification</inlineHelpText>
        <label>Qualification Status</label>
        <picklist>
            <picklistValues>
                <fullName>Interest in APM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing APM User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lights out competitive user</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Quotes_Require_Legal_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when Terms that the Order Form Can Override on Contract == YES</description>
        <inlineHelpText>Checked when Terms that the Order Form Can Override on Contract = YES</inlineHelpText>
        <label>Quotes Require Legal Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMKRViewCentral__VCOrganizationID__c</fullName>
        <externalId>true</externalId>
        <label>VCOrganization ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Copy of Account Record Type to create dependent list.</description>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Customer__c</fullName>
        <label>Reference Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential - Not Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential - Contacted Waiting for Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential - Customer Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential - Approved by Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Territory_AppD__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>D&amp;B Annual Revenue</description>
        <formula>DandbCompany.SalesVolume</formula>
        <inlineHelpText>This field represents the D&amp;B Company revenue matched real-time
using the DUNS number</inlineHelpText>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS2__c</fullName>
        <description>A Sales Segment Clone, but smaller size. This assigns the Tiers based on the 3 Sales Segment fields.  99% of the Global Sales Segment values are populated from this formula.</description>
        <formula>IF(User_Added_Revenue__c&gt;1000000000,&apos;Tier 1-Expandables&apos;,
IF(AND(NOT(ISBLANK(User_Added_Revenue__c)),User_Added_Revenue__c&gt;=50000000,User_Added_Revenue__c&lt;=1000000000),&apos;Tier 2-Dependents&apos;,
IF(AND(NOT(ISBLANK(User_Added_Revenue__c)),User_Added_Revenue__c!=0,User_Added_Revenue__c&lt;50000000),&apos;Tier 3-Opportunists&apos;,
IF(Revenue__c&gt;1000000000,&apos;Tier 1-Expandables&apos;,
IF(AND(NOT(ISBLANK(Revenue__c)),Revenue__c&gt;=50000000,Revenue__c&lt;=1000000000),&apos;Tier 2-Dependents&apos;,
IF(AND(NOT(ISBLANK(Revenue__c)),Revenue__c!=0,Revenue__c&lt;50000000),&apos;Tier 3-Opportunists&apos;,
IF(AnnualRevenue&gt;1000000000,&apos;Tier 1-Expandables&apos;,
IF(AND(NOT(ISBLANK(AnnualRevenue)),AnnualRevenue&gt;=50000000,AnnualRevenue&lt;=1000000000),&apos;Tier 2-Dependents&apos;,
IF(AND(NOT(ISBLANK(AnnualRevenue)),AnnualRevenue!=0,AnnualRevenue&lt;50000000),&apos;Tier 3-Opportunists&apos;,
&apos;Tier 4-Unclassified&apos;)))))))))

/* 1,363 */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSRU__c</fullName>
        <description>Designates value 1-4 based on the 3 Sales Segment Revenue fields.  Value is then compared against Sales Segment Roll-Up value in the Global Sales Segment formula: IF(DSE__DS_Ultimate_Parent__r.SSRU__c&lt;Sales_Segment_Roll_Up__c,DSE__DS_Ultimate_Parent__r.SS2__c...</description>
        <formula>IF(User_Added_Revenue__c&gt;1000000000,1,
IF(AND(NOT(ISBLANK(User_Added_Revenue__c)),User_Added_Revenue__c&gt;=50000000,User_Added_Revenue__c&lt;=1000000000),2,
IF(AND(NOT(ISBLANK(User_Added_Revenue__c)),User_Added_Revenue__c!=0,User_Added_Revenue__c&lt;50000000),3,
IF(Revenue__c&gt;1000000000,1,
IF(AND(NOT(ISBLANK(Revenue__c)),Revenue__c&gt;=50000000,Revenue__c&lt;=1000000000),2,
IF(AND(NOT(ISBLANK(Revenue__c)),Revenue__c!=0,Revenue__c&lt;50000000),3,
IF(AnnualRevenue&gt;1000000000,1,
IF(AND(NOT(ISBLANK(AnnualRevenue)),AnnualRevenue&gt;=50000000,AnnualRevenue&lt;=1000000000),2,
IF(AND(NOT(ISBLANK(AnnualRevenue)),AnnualRevenue!=0,AnnualRevenue&lt;50000000),3,
4)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSRU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SaaS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SaaS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Segment_Annual_Revenue__c</fullName>
        <description>Used in calculating the Sales Segments.</description>
        <formula>IF(AnnualRevenue=0,&apos;Tier 4-Unclassified&apos;,
IF(AnnualRevenue&lt;50000000,&apos;Tier 3-Opportunists&apos;,
IF(AnnualRevenue&lt;=1000000000,&apos;Tier 2-Dependents&apos;,
If(AnnualRevenue&gt;1000000000,&apos;Tier 1-Expandables&apos;,&apos;Tier 4-Unclassified&apos;
))))</formula>
        <label>Sales Segment (Annual Revenue)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Segment_Revenue__c</fullName>
        <formula>IF(Revenue__c=0,&apos;Tier 4-Unclassified&apos;,
IF(Revenue__c&lt;50000000,&apos;Tier 3-Opportunists&apos;, 
IF(Revenue__c&lt;=1000000000,&apos;Tier 2-Dependents&apos;, 
If(Revenue__c&gt;1000000000,&apos;Tier 1-Expandables&apos;,&apos;Tier 4-Unclassified&apos; 
))))</formula>
        <label>Sales Segment (Revenue)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Segment_Roll_Up__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Segment Roll-Up</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Segment_User_Inputted__c</fullName>
        <description>Used in Sales Segment calculation</description>
        <formula>IF(User_Added_Revenue__c=0,&apos;Tier 4-Unclassified&apos;, 
IF(User_Added_Revenue__c&lt;50000000,&apos;Tier 3-Opportunists&apos;, 
IF(User_Added_Revenue__c&lt;=1000000000,&apos;Tier 2-Dependents&apos;, 
If(User_Added_Revenue__c&gt;1000000000,&apos;Tier 1-Expandables&apos;,&apos;Tier 4-Unclassified&apos; 
))))</formula>
        <label>Sales Segment (User Inputted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Segment__c</fullName>
        <description>Used in all the reporting for marketing.</description>
        <formula>If(Sales_Segment_User_Inputted__c!=&apos;Tier 4-Unclassified&apos;,Sales_Segment_User_Inputted__c,
If(Sales_Segment_Revenue__c!=&apos;Tier 4-Unclassified&apos;,Sales_Segment_Revenue__c,
If(Sales_Segment_Annual_Revenue__c!=&apos;Tier 4-Unclassified&apos;,Sales_Segment_Annual_Revenue__c,
&apos;Tier 4-Unclassified&apos;)))</formula>
        <label>Sales Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Target_Tier__c</fullName>
        <description>Sales Target Tier of an account with Tier 1 being the best and Tier 4 being the lowest.</description>
        <inlineHelpText>Please select the Target Tier of this account with Tier 1 being the highest and Tier 4 being the lowest.</inlineHelpText>
        <label>Sales Target Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Snapshot_Record_Type__c</fullName>
        <formula>CASE(  RecordTypeId,  &quot;01280000000LtAZ&quot;, &quot;Co-Sale Partner&quot;, 
 &quot;01280000000Lszg&quot;, &quot;Former Customer&quot;, 
 &quot;01280000000LrcY&quot;, &quot;Partner Account&quot;, 
 &quot;01280000000LrBm&quot;, &quot;Prospect&quot;, 
 &quot;01280000000Lt9l&quot;, &quot;Service Provider&quot;, 
 &quot;01280000000Lqts&quot;, &quot;Standard Account&quot;, 
 &quot;01280000000Lt4l&quot;, &quot;Systems Integrator&quot;, 
 &quot;01280000000Lqtn&quot;, &quot;VAR Account&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <description>This field attribute was added to capture the Sub-Industry provided by Inside View during the data cleansing/appending process in July 2012.</description>
        <label>Sub-Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting &amp; Finance Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting, Tax, Bookkeeping &amp; Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Medical Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace &amp; Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace &amp; Defense, Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace Product &amp; Parts Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Transport, Nonscheduled and Charter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines &amp; Scheduled Air Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airports and Terminals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Energy Sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement &amp; Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Hosting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Service Providers (ASPs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture &amp; Engineering Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts, Gifts &amp; Novelties Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions &amp; Internet Auctions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto &amp; Other Vehicle Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Rental and Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Repair &amp; Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobile Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobiles and Motor Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Industry Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Service &amp; Collision Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakery &amp; Bakery Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverages - Distillers &amp; Wineries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subsidiary__c</fullName>
        <inlineHelpText>Appdynamics, Inc. refers to all accounts in North and South America
Appdynamics UK2 refers to all accounts in Europe, Asia, Australia, and Africa</inlineHelpText>
        <label>Subsidiary</label>
        <picklist>
            <picklistValues>
                <fullName>AppDynamics, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics UK2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <description>This field was added for Boris to track the level of support we should be giving a customer. It is a picklist field.</description>
        <inlineHelpText>Please select a support level.</inlineHelpText>
        <label>Premium Level</label>
        <picklist>
            <picklistValues>
                <fullName>Blue</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sync_in_Progress__c</fullName>
        <formula>IF( OR(NetSuite_Pull__c , NetSuite_Push__c) ,&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sync in Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>AppD Customer Success</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>AppD Customer Success</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Project_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_AppD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory AppD</label>
        <referenceTo>Territory_AppD__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <picklist>
            <controllingField>Territory_Type__c</controllingField>
            <picklistValues>
                <fullName>Alliances1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliances2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CER11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FED1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FED2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FED3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FED4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FED5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSP1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSP2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSP3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSP4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSP5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSP6</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_Reporting__c</fullName>
        <formula>Territory_AppD__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Type__c</fullName>
        <label>Territory Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI/MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Active_Agents__c</fullName>
        <formula>License__r.Net_Agents__c  +  License__r.Machine_Agents__c  +  License__r.Server_Agents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Active Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Converted_US__c</fullName>
        <label>Total Account Revenue</label>
        <summarizedField>Opportunity.Hidden_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>W10 - Closed/Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Booked_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trigger_Account_18_digit_Workflow__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to update 18 digit id field in workflow</description>
        <label>Trigger Account 18 digit Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Customer_Status_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Customer Status Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USD_SUM_Amount__c</fullName>
        <label>USD SUM Amount</label>
        <summarizedField>Opportunity.Hidden_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>W10 - Closed/Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unbilled_Orders__c</fullName>
        <description>Unbilled orders on this account in Netsuite</description>
        <label>Unbilled Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Added_Industry__c</fullName>
        <label>User Added Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Added_Revenue__c</fullName>
        <inlineHelpText>This is a manually-populated field with the sole purpose to act as an override in calculating the Sales Segment field. Inputted values should should be pre-converted and entered as USD (i.e. ignore any &quot;conversion&quot; that happens after saving in SFDC)</inlineHelpText>
        <label>User Added Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAR__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this is a VAR relationship.</inlineHelpText>
        <label>VAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit_Sent_Date__c</fullName>
        <inlineHelpText>Please enter the date the welcome kit was sent.</inlineHelpText>
        <label>Welcome Kit Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X500K_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when an email for the account surpassing $500K in bookings has been sent.</description>
        <label>500K Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X90_Day_Last_Date_of_Customer_Response__c</fullName>
        <formula>Last_Date_of_Customer_Response__c &lt;= TODAY()-90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90-Day Last Date of Customer Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization__c</fullName>
        <description>Specify your Zendesk Organization name here if you&apos;d like to override the default behavior of the ticket view.</description>
        <inlineHelpText>Show Zendesk tickets for the specified organization instead of the combined tickets for all users in the account.</inlineHelpText>
        <label>Zendesk Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dba_industry__c</fullName>
        <formula>IF(User_Added_Industry__c&lt;&gt;NULL , User_Added_Industry__c,
IF(Industry_Normalised__c&lt;&gt;NULL, Industry_Normalised__c, TEXT(Industry)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dll__DL_Active__c</fullName>
        <label>DL_Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dll__DL_CompanyId__c</fullName>
        <label>DUNS</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dll__DL_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>